--- a/public/admin-tools.html
+++ b/public/admin-tools.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8" />
   <title>Admin Import</title>
+  <link rel="stylesheet" href="styles.css?v=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>body{font-family:system-ui,Arial,sans-serif;max-width:700px;margin:40px auto;padding:0 16px;}input,button{padding:8px;margin:6px 0;width:100%}fieldset{margin:18px 0;padding:12px}</style>
+  
 </head>
 <body>
   <h1>Admin Import</h1>
@@ -50,3 +51,4 @@
   <p><a href="/index.html">Back</a></p>
 </body>
 </html>
+
