--- a/public/expenses.html
+++ b/public/expenses.html
@@ -1,120 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <title>Expenses</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body{font-family:system-ui,Arial,sans-serif;max-width:1100px;margin:24px auto;padding:0 16px}
-    table{width:100%;border-collapse:collapse;margin-top:12px}
-    th,td{border:1px solid #ddd;padding:8px;text-align:left}
-    th{background:#f5f5f5}
-    .row{display:flex;gap:16px;flex-wrap:wrap}
-    .card{flex:1 1 420px;border:1px solid #ddd;border-radius:10px;padding:12px}
-    input,select,textarea,button{padding:8px;margin:6px 0;width:100%}
-    .actions button{width:auto;margin-right:6px}
-  </style>
-</head>
-<body>
-  <h1>Expenses</h1>
-  <p><a href="/index.html">Back to Main</a></p>
+﻿<!-- expenses.html build v2025-10-10-2 -->
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Expenses</title>
+  <link rel="stylesheet" href="styles.css?v=1" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <div class="row">
-    <div class="card">
-      <h2>Add / Edit Expense</h2>
-      <input type="hidden" id="exp_id" />
-      <label>Vendor</label><input id="vendor" />
-      <label>Date</label><input type="date" id="date" />
-      <label>Amount</label><input type="number" step="0.01" id="amount" />
-      <label>Taxable</label>
-      <select id="taxable"><option value="1">Taxable</option><option value="0">Non-taxable</option></select>
-      <label>Category</label><input id="category" />
-      <label>Note</label><textarea id="note" rows="2"></textarea>
-      <button id="saveBtn">Save Expense</button>
-      <button id="resetBtn" type="button">Reset</button>
-    </div>
-
-    <div class="card">
-      <h2>Expense List</h2>
-      <table id="tbl">
-        <thead>
-          <tr><th>Vendor</th><th>Date</th><th>Amount</th><th>Taxable</th><th>Category</th><th>Note</th><th>Actions</th></tr>
-        </thead>
-        <tbody><tr><td colspan="7">Loading…</td></tr></tbody>
-      </table>
-    </div>
-  </div>
-
+</head><body>
+<h1>Expenses</h1><p><a href="index.html">← Back to Main</a></p>
+<h2>Add Expense</h2>
+<div class="row">
+  <input id="vendor" placeholder="Vendor" />
+  <input id="category" placeholder="Category" />
+  <input id="amount" type="number" step="0.01" placeholder="Amount" />
+  <label><input id="taxable" type="checkbox" /> Taxable</label>
+  <input id="date" type="date" />
+  <input id="notes" placeholder="Notes" />
+  <button id="addBtn">Add Expense</button>
+</div>
+<h2>Expenses List</h2>
+<table id="expTable"><thead><tr><th>Date</th><th>Vendor</th><th>Category</th><th>Amount</th><th>Taxable</th><th>Notes</th><th>Actions</th></tr></thead><tbody></tbody></table>
+<p>Marker: expenses.html build v2025-10-10-2</p>
 <script>
-const $=s=>document.querySelector(s);
-function clearForm(){ ['exp_id','vendor','date','amount','category','note'].forEach(id=>$('#'+id).value=""); $('#taxable').value="1"; }
-function rowToForm(tr,id){
-  const t=[...tr.children];
-  $('#exp_id').value=id;
-  $('#vendor').value=t[0].textContent;
-  $('#date').value=t[1].textContent;
-  $('#amount').value=t[2].textContent.replace(/[^0-9.]/g,'');
-  $('#taxable').value=(t[3].textContent.trim().toLowerCase()==='taxable')?'1':'0';
-  $('#category').value=t[4].textContent;
-  $('#note').value=t[5].textContent;
-}
-
-async function load(){
-  const tb=$('#tbl tbody'); tb.innerHTML='<tr><td colspan="7">Loading…</td></tr>';
-  const r=await fetch('/api/expenses'); const rows=await r.json();
-  if(!Array.isArray(rows)||rows.length===0){ tb.innerHTML='<tr><td colspan="7">No expenses</td></tr>'; return; }
-  tb.innerHTML='';
-  rows.forEach(x=>{
-    const tr=document.createElement('tr');
-    tr.innerHTML=`
-      <td>${x.vendor||''}</td>
-      <td>${x.date||''}</td>
-      <td>$${Number(x.amount||0).toFixed(2)}</td>
-      <td>${x.taxable? 'Taxable':'Non-tax'}</td>
-      <td>${x.category||''}</td>
-      <td>${x.note||''}</td>
-      <td class="actions">
-        <button data-id="${x.id}" class="edit">Edit</button>
-        <button data-id="${x.id}" class="del">Delete</button>
-      </td>`;
-    tb.appendChild(tr);
-  });
-}
-
-$('#saveBtn').onclick = async ()=>{
-  const id=$('#exp_id').value.trim();
-  const body={
-    vendor:$('#vendor').value.trim(),
-    date:$('#date').value,
-    amount:$('#amount').value,
-    taxable:$('#taxable').value,
-    category:$('#category').value.trim(),
-    note:$('#note').value.trim()
-  };
-  const r=await fetch(id?`/api/expenses/${id}`:'/api/expenses',{
-    method: id?'PUT':'POST',
-    headers:{'Content-Type':'application/json'},
-    body: JSON.stringify(body)
-  });
-  const out=await r.json();
-  if(!r.ok){ alert(out.error||'Save failed'); return; }
-  clearForm(); load();
-};
-$('#resetBtn').onclick = clearForm;
-
-document.getElementById('tbl').addEventListener('click', async (e)=>{
-  const btn=e.target.closest('button'); if(!btn) return;
-  const id=btn.dataset.id; const tr=btn.closest('tr');
-  if(btn.classList.contains('edit')) rowToForm(tr,id);
-  else if(btn.classList.contains('del')){
-    if(!confirm('Delete this expense?')) return;
-    const r=await fetch(`/api/expenses/${id}`,{method:'DELETE'}); const out=await r.json();
-    if(!r.ok){ alert(out.error||'Delete failed'); return; }
-    load();
-  }
-});
-
-load();
+const $=s=>document.querySelector(s), $$=s=>Array.from(document.querySelectorAll(s));
+document.getElementById('date').value=new Date().toISOString().slice(0,10);
+async function loadExpenses(){const arr=await (await fetch('/api/expenses')).json(); const tbody=$('#expTable tbody'); tbody.innerHTML=''; for(const e of arr){const tr=document.createElement('tr'); tr.innerHTML=`<td>${e.date||''}</td><td>${e.vendor||''}</td><td>${e.category||''}</td><td>${(+e.amount).toFixed(2)}</td><td>${e.taxable?'Yes':'No'}</td><td>${e.notes||''}</td><td><button data-id="${e.id}" class="del">Delete</button></td>`; tbody.appendChild(tr)} $$('#expTable .del').forEach(b=>b.onclick=async()=>{await fetch('/api/expenses/'+b.dataset.id,{method:'DELETE'}); loadExpenses();})}
+$('#addBtn').onclick=async()=>{const p={vendor:$('#vendor').value,category:$('#category').value,amount:$('#amount').value,taxable:$('#taxable').checked,date:$('#date').value,notes:$('#notes').value}; await fetch('/api/expenses',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(p)}); $('#vendor').value=''; $('#category').value=''; $('#amount').value=''; $('#notes').value=''; loadExpenses();}
+loadExpenses();
 </script>
-</body>
-</html>
+</body></html>
+
