--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,16 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8"/>
-  <title>Dojo Apps</title>
-  <style>
-    body{font-family:system-ui,Arial,sans-serif;margin:24px}
-    h1{margin-bottom:8px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:14px;margin-top:16px}
-    a.card{display:block;padding:16px;border:1px solid #ddd;border-radius:10px;text-decoration:none;color:#111;background:#fafafa}
-    a.card:hover{background:#f3f3f3}
-    .small{color:#666;font-size:.9em;margin-top:10px}
-  </style>
-</head>
-<body>
-  <h1>Dojo Apps</h1>
-  <div class="small">Choose a section:</div>
-  <div class="grid">
-    <a class="card" href="leads.html">Leads</a>
-    <a class="card" href="students.html">Students</a>
-    <a class="card" href="payments.html">Payments (Printable Receipts)</a>
-    <a class="card" href="accounting.html">Accounting</a>
-  </div>
-</body>
-</html>
+﻿<!-- index.html build v2025-10-10-2 -->
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Martial Arts App</title>
+  <link rel="stylesheet" href="styles.css?v=1" /><meta name="viewport" content="width=device-width, initial-scale=1" />
+
+</head><body>
+<h1>Martial Arts App</h1>
+<div class="grid">
+  <a class="card" href="students.html">Students</a>
+  <a class="card" href="attendance.html">Attendance</a>
+  <a class="card" href="payments.html">Payments</a>
+  <a class="card" href="expenses.html">Expenses</a>
+  <a class="card" href="accounting.html">Accounting</a>
+  <a class="card" href="leads.html">Leads</a>
+</div>
+</body></html>
+
