--- a/public/payments.html
+++ b/public/payments.html
@@ -1,211 +1,29 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8"/>
-  <title>Payments</title>
-  <style>
-    body{font-family:system-ui,Arial,sans-serif;margin:20px}
-    .nav{margin-bottom:16px}
-    .nav a{text-decoration:none;padding:6px 10px;border:1px solid #ccc;border-radius:6px;background:#f7f7f7}
-    .toolbar{display:flex;gap:8px;align-items:center;margin:8px 0 16px}
-    .toolbar button{padding:6px 10px}
-    form input, form select, form button, form label{padding:8px;margin:4px 6px 4px 0}
-    table{border-collapse:collapse;width:100%;margin-top:10px}
-    th, td{border:1px solid #ddd;padding:8px;text-align:left}
-    .right{text-align:right}
-    .badge{display:inline-block;padding:2px 6px;border-radius:10px;background:#eef}
-    .badge.nt{background:#efe}
-  </style>
-</head>
-<body>
-  <div class="nav"><a href="index.html">⬅ Back to Main</a></div>
-  <h1>Payments</h1>
+﻿<!-- payments.html build v2025-10-10-2 -->
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Payments</title>
+  <link rel="stylesheet" href="styles.css?v=1" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <div class="toolbar">
-    <button id="settingsBtn">⚙️ Receipt Settings</button>
-    <span class="small" style="color:#666">Configure dojo name/address for receipts.</span>
-  </div>
-
-  <form id="payForm">
-    <input type="date" name="date" id="date">
-    <select name="student_id" id="studentSelect">
-      <option value="">(No student)</option>
-    </select>
-    <input type="number" name="amount" step="0.01" placeholder="Amount" required>
-    <input name="method" placeholder="Method (cash, card, etc.)">
-    <label><input type="checkbox" name="taxable" checked> Taxable</label>
-    <input name="note" placeholder="Note">
-    <button type="submit">Add Payment</button>
-  </form>
-
-  <table id="tbl">
-    <thead>
-      <tr>
-        <th>ID</th><th>Date</th><th>Student</th><th class="right">Amount</th><th>Method</th><th>Tax</th><th>Note</th><th>Actions</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
+</head><body>
+<h1>Payments</h1><p><a href="index.html">← Back to Main</a></p>
+<h2>Add Payment</h2>
+<div class="row">
+  <select id="student"></select>
+  <input id="amount" type="number" step="0.01" placeholder="Amount" />
+  <select id="method"><option>cash</option><option>e-transfer</option><option>card</option><option>other</option></select>
+  <label><input id="taxable" type="checkbox" /> Taxable</label>
+  <input id="date" type="date" />
+  <input id="notes" placeholder="Notes" />
+  <button id="addBtn">Add Payment</button>
+</div>
+<h2>Payments List</h2>
+<table id="payTable"><thead><tr><th>Date</th><th>Student</th><th>Amount</th><th>Method</th><th>Taxable</th><th>Notes</th><th>Actions</th></tr></thead><tbody></tbody></table>
+<p>Marker: payments.html build v2025-10-10-2</p>
 <script>
-const RECEIPT_KEY = 'dojo_receipt_settings'; // stored in localStorage
-function defaultSettings(){
-  return {
-    dojoName: 'Illyrian MMA Dojo',
-    dojoAddress: '123 Training Way, City, ST',
-    dojoPhone: '(555) 555-5555'
-  };
-}
-function getSettings(){
-  try { return JSON.parse(localStorage.getItem(RECEIPT_KEY)) || defaultSettings(); }
-  catch { return defaultSettings(); }
-}
-function setSettings(s){ localStorage.setItem(RECEIPT_KEY, JSON.stringify(s)); }
-
-document.getElementById('settingsBtn').addEventListener('click', ()=>{
-  const s = getSettings();
-  const name = prompt('Dojo Name', s.dojoName); if (name===null) return;
-  const addr = prompt('Dojo Address', s.dojoAddress); if (addr===null) return;
-  const phone = prompt('Dojo Phone', s.dojoPhone); if (phone===null) return;
-  setSettings({ dojoName:name, dojoAddress:addr, dojoPhone:phone });
-  alert('Saved.');
-});
-
-function todayISO(){ return new Date().toISOString().slice(0,10); }
-
-async function fetchJSON(url, opts){
-  const r = await fetch(url, opts);
-  const t = await r.text();
-  try { return JSON.parse(t); } catch { return { ok:false, error:'Invalid JSON', raw:t }; }
-}
-
-let studentMap = new Map(); // id -> name
-
-async function loadStudents(){
-  const res = await fetchJSON('/api/students');
-  const sel = document.getElementById('studentSelect');
-  sel.innerHTML = `<option value="">(No student)</option>`;
-  studentMap = new Map();
-  if (res.ok){
-    for (const s of res.students){
-      studentMap.set(String(s.id), s.name);
-      const opt = document.createElement('option');
-      opt.value = s.id; opt.textContent = `#${s.id} – ${s.name}`;
-      sel.appendChild(opt);
-    }
-  }
-}
-
-function fmt(x){ return Number(x||0).toFixed(2); }
-
-async function loadPayments(){
-  const tb = document.querySelector('#tbl tbody');
-  tb.innerHTML = '<tr><td colspan="8">Loading…</td></tr>';
-  const data = await fetchJSON('/api/payments');
-  if (!data.ok){ tb.innerHTML = `<tr><td colspan="8">Error: ${data.error||data.raw}</td></tr>`; return; }
-  tb.innerHTML = '';
-  for (const p of data.payments){
-    const tr = document.createElement('tr');
-    const sname = p.student_id ? (studentMap.get(String(p.student_id)) || `#${p.student_id}`) : '';
-    tr.innerHTML = `
-      <td>${p.id}</td>
-      <td>${p.date||''}</td>
-      <td>${sname||''}</td>
-      <td class="right">${fmt(p.amount)}</td>
-      <td>${p.method||''}</td>
-      <td>${Number(p.taxable)?'<span class="badge">Taxable</span>':'<span class="badge nt">Non-Tax</span>'}</td>
-      <td>${p.note||''}</td>
-      <td><button data-print="${p.id}">🖨️ Print</button></td>
-    `;
-    tr.dataset.row = JSON.stringify(p);
-    tb.appendChild(tr);
-  }
-}
-
-function buildReceiptHTML(pay, studentName){
-  const s = getSettings();
-  return `<!doctype html>
-<html>
-<head>
-<meta charset="utf-8"/>
-<title>Receipt #${pay.id}</title>
-<style>
-  body{font-family:system-ui,Arial,sans-serif;margin:20px}
-  .hdr{text-align:center;margin-bottom:10px}
-  .hdr h2{margin:0}
-  .box{border:1px solid #000;padding:12px}
-  table{width:100%;border-collapse:collapse;margin-top:10px}
-  th,td{border:1px solid #000;padding:6px;text-align:left}
-  .right{text-align:right}
-  @media print {
-    button{display:none}
-    body{margin:0}
-  }
-</style>
-</head>
-<body>
-  <div class="hdr">
-    <h2>${s.dojoName}</h2>
-    <div>${s.dojoAddress}</div>
-    <div>${s.dojoPhone}</div>
-  </div>
-  <div class="box">
-    <div><b>Receipt #:</b> ${pay.id}</div>
-    <div><b>Date:</b> ${pay.date || ''}</div>
-    <div><b>Student:</b> ${studentName || ''}</div>
-    <div><b>Method:</b> ${pay.method || ''}</div>
-  </div>
-  <table>
-    <thead><tr><th>Description</th><th class="right">Amount (USD)</th></tr></thead>
-    <tbody>
-      <tr><td>${pay.note || 'Payment'}</td><td class="right">${Number(pay.amount).toFixed(2)}</td></tr>
-    </tbody>
-    <tfoot>
-      <tr><th>Total</th><th class="right">${Number(pay.amount).toFixed(2)}</th></tr>
-    </tfoot>
-  </table>
-  <p>Tax status: ${Number(pay.taxable)?'Taxable':'Non-Taxable'}</p>
-  <button onclick="window.print()">Print</button>
-</body>
-</html>`;
-}
-
-document.querySelector('#tbl').addEventListener('click', (e)=>{
-  const id = e.target?.dataset?.print;
-  if (!id) return;
-  const tr = e.target.closest('tr');
-  const pay = JSON.parse(tr.dataset.row);
-  const studentName = pay.student_id ? (studentMap.get(String(pay.student_id)) || `#${pay.student_id}`) : '';
-  const html = buildReceiptHTML(pay, studentName);
-  const w = window.open('', '_blank', 'width=520,height=720');
-  w.document.open(); w.document.write(html); w.document.close();
-  // auto print shortly after open
-  setTimeout(()=>{ try{ w.focus(); w.print(); }catch{} }, 300);
-});
-
-// form submit
-document.getElementById('payForm').addEventListener('submit', async (e)=>{
-  e.preventDefault();
-  const fd = new FormData(e.target);
-  // default date if empty
-  if (!fd.get('date')) fd.set('date', todayISO());
-  // checkbox normalization
-  fd.set('taxable', fd.get('taxable') ? 1 : 0);
-  const body = Object.fromEntries(fd.entries());
-  const res = await fetchJSON('/api/payments', {
-    method:'POST',
-    headers:{'Content-Type':'application/json'},
-    body: JSON.stringify(body)
-  });
-  if (!res.ok){ alert('Error: ' + res.error); return; }
-  e.target.reset();
-  document.getElementById('date').value = todayISO();
-  loadPayments();
-});
-
-// init
-document.getElementById('date').value = todayISO();
-(async ()=>{ await loadStudents(); await loadPayments(); })();
+const $=s=>document.querySelector(s), $$=s=>Array.from(document.querySelectorAll(s));
+document.getElementById('date').value=new Date().toISOString().slice(0,10);
+async function loadStudents(){const d=await (await fetch('/api/students?active=1')).json(); $('#student').innerHTML=d.map(s=>`<option value="${s.id}">${s.first_name||''} ${s.last_name||''}</option>`).join('')}
+async function loadPayments(){const arr=await (await fetch('/api/payments')).json(); const tbody=$('#payTable tbody'); tbody.innerHTML=''; for(const p of arr){const tr=document.createElement('tr'); tr.innerHTML=`<td>${p.date||''}</td><td>${(p.first_name||'')+' '+(p.last_name||'')}</td><td>${(+p.amount).toFixed(2)}</td><td>${p.method||''}</td><td>${p.taxable?'Yes':'No'}</td><td>${p.notes||''}</td><td><button data-id="${p.id}" class="del">Delete</button></td>`; tbody.appendChild(tr)} $$('#payTable .del').forEach(b=>b.onclick=async()=>{await fetch('/api/payments/'+b.dataset.id,{method:'DELETE'}); loadPayments();})}
+$('#addBtn').onclick=async()=>{const p={student_id:$('#student').value,amount:$('#amount').value,method:$('#method').value,taxable:$('#taxable').checked,date:$('#date').value,notes:$('#notes').value}; await fetch('/api/payments',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(p)}); $('#amount').value=''; $('#notes').value=''; loadPayments();}
+loadStudents(); loadPayments();
 </script>
-</body>
-</html>
+</body></html>
+
